--- a/Curve Generation/Python/requirements.txt
+++ b/Curve Generation/Python/requirements.txt
@@ -1,8 +1,11 @@
+attrs==18.2.0
 cycler==0.10.0
+jsonschema==3.0.0a3
 kiwisolver==1.0.1
 matplotlib==3.0.2
 numpy==1.15.4
 pyparsing==2.3.0
+pyrsistent==0.14.8
 python-dateutil==2.7.5
 six==1.11.0
 yapf==0.25.0
