--- a/Curve Generation/C/platformio.ini
+++ b/Curve Generation/C/platformio.ini
@@ -12,3 +12,12 @@
 platform = teensy
 board = teensy31
 framework = arduino
+
+
+;
+; Desktop platforms (Win, Mac, Linux, Raspberry Pi, etc)
+; See https://platformio.org/platforms/native
+;
+
+[env:native]
+platform = native
