Integrating the main sensor reading source code

--- a/Curve Generation/C/platformio.ini
+++ b/Curve Generation/C/platformio.ini
@@ -13,11 +13,15 @@
 platform = teensy
 board = teensy35
 framework = arduino
+lib_deps=
+  Adafruit Unified Sensor
+  SparkFun LSM9DS1 IMU
+  Adafruit MPL3115A2 Library
 
 ;
 ; Desktop platforms (Win, Mac, Linux, Raspberry Pi, etc)
 ; See https://platformio.org/platforms/native
 ;
 
-[env:native]
-platform = native
+; [env:native]
+; platform = native
