Switched out the std::arrays for C style arrays

--- a/Curve Generation/C/platformio.ini
+++ b/Curve Generation/C/platformio.ini
@@ -23,5 +23,9 @@ lib_deps=
 ; See https://platformio.org/platforms/native
 ;
 
-; [env:native]
-; platform = native
+[env:native]
+platform = native
+lib_ignore =
+  Adafruit Unified Sensor
+  SparkFun LSM9DS1 IMU
+  Adafruit MPL3115A2 Library
